@@ -8,7 +8,8 @@ Maintainer: Michael Friendly <friendly@yorku.ca>
 Depends: vcd,gnm
 Suggests: ca,gmodels,Fahrmeir,effects,VGAM,plyr,rgl
 Description: Provides additional data sets, methods and documentation to complement the vcd package for Visualizing Categorical Data.
-	In particular, vcdExtra extends mosaic, assoc and sieve plots from vcd to handle glm() and gnm() models.
+	In particular, vcdExtra extends mosaic, assoc and sieve plots from vcd to handle glm() and gnm() models and
+	adds a 3D version in mosaic3d.
 License: GPL version 2 or newer
 LazyLoad: yes
 LazyData: yes
