@@ -1,4 +1,4 @@
-# last modified 3 Mar 2010 by M. Friendly
+# last modified 7 Apr 2010 by M. Friendly
 import(vcd)
 export(
 	expand.dft,expand.table,collapse.table,
@@ -7,7 +7,7 @@ export(
 	GKgamma,print.GKgamma,
 	glmlist, loglmlist, summarize, 
 	print.Kappa,
-	mosaic3d)
+	mosaic3d, split3d, range3d)
 
 S3method(mosaic, glm)
 S3method(sieve, glm)
@@ -20,4 +20,6 @@ S3method(summarize, loglm)
 S3method(summarize, loglmlist)
 S3method(print, GKgamma)
 S3method(print, Kappa)
+S3method(split3d, shape3d)
+S3method(split3d, list)
 
