@@ -2,6 +2,7 @@ Version 0.4-3 (2010-03-25)
 
 o Added demo(mosaic3d-demo), a proof-of-concept for doing 3D mosaic displays
 o Added mosaic3d()
+o Factored out split3d() and gave it S3 methods
 
 
 Version 0.4-2 (2010-03-09)
